--- a/development/business-account-v2.html
+++ b/development/business-account-v2.html
@@ -314,7 +314,7 @@
       <li>
     <h3>Register your CRA account</h3>
     <p></p>
-    <p>If you haven’t registered for a CRA account before, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">Register for a CRA account</a></p>
+    <p>To register follow the steps on: <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">Register for a CRA account</a></p>
   </li>
       <li>
     <h3>Determine if you need to register your business number and charity program account</h3>
@@ -325,7 +325,7 @@
     <li>registered Canadian amateur athletic association</li>
     <li>registered national arts service organization</li>
 </ul>
-
+<br>
 <p>Situations you may be in:</p>
 <details>
     <summary>If you are part of an organization with a head body</summary>
@@ -343,7 +343,7 @@
     <p>Please sign in and check your CRA account, or <a href="#">contact us</a> to find out</p>
 </details>
 <h3>Register for a business number and charity program account</h3>
-<p>If you have determined that you require a business number and charity program account, follow the steps on <a href="https://cra-design.github.io/cop-business/register-business/how-register-res-sub1.html#h-1">Register with Business Registration Online(BRO)</a></p>
+<p>If you have determined that you require a business number and charity program account, follow the steps on: <br> <a href="https://cra-design.github.io/cop-business/register-business/how-register-res-sub1.html#h-1">Register with Business Registration Online(BRO)</a></p>
  
   </li>
       <li>
@@ -354,7 +354,7 @@
         <li>Select <strong>Add account</strong>, then <strong>Business account</strong></li>
         <li>Select <strong>Add business number</strong>, then enter your business number
             <ul>
-                <li>If you have an charity program account  registered through this business, it will be automatically added</li>
+                <li>If you have a charity program account registered through this business, it will be automatically added</li>
             </ul>
         </li>
     </ol>
@@ -365,7 +365,7 @@
 <h2 id="h-3">Register your charity</h2> 
 <p>Having a business number and a charity program account does not automatically make you a registered charity</p>
 <p>To become a registered charity, you will need to:</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+<ul class="list-unstyled cnjnctn-type-or">
       <li class="cnjnctn-col">
         <p>Submit an application to <a href="#">register a charity under the Income Tax Act</p>
       </li>
@@ -374,7 +374,6 @@
       </li>
 </ul>
     
-
 </div>
 
 
