--- a/development/business-account-v2.html
+++ b/development/business-account-v2.html
@@ -365,6 +365,9 @@
 <h2 id="h-3">Register your charity</h2> 
 <p>Having a business number and a charity program account does not automatically make you a registered charity</p>
 <p>To become a registered charity, you will need to:</p>
+<!-- <h2 id="h-3">Register your charity</h2> 
+<p>Having a business number and a charity program account does not automatically make you a registered charity</p>
+<p>To become a registered charity, you will need to:</p>
 <ul class="list-unstyled cnjnctn-type-or">
       <li class="cnjnctn-col">
         <p>Submit an application to <a href="#">register a charity under the Income Tax Act</p>
@@ -372,7 +375,7 @@
       <li class="cnjnctn-col">
         <p>Sign-in to your CRA account and click <strong>Register a charity</strong></p>
       </li>
-</ul>
+</ul> -->
     
 </div>
 
