--- a/development/business-account-v2.html
+++ b/development/business-account-v2.html
@@ -275,7 +275,7 @@
 
 
 
-    <h1 class="gc-thickline mrgn-tp-0" id="wb-cont">How to sign up for chartities online services</h1>
+    <h1 class="gc-thickline mrgn-tp-0" id="wb-cont">How to sign up for charities online services</h1>
 
 
 </div>
