--- a/development/business-account-v2.html
+++ b/development/business-account-v2.html
@@ -343,7 +343,7 @@
     <p>Please sign in and check your CRA account, or <a href="#">contact us</a> to find out</p>
 </details>
 <h3>Register for a business number and charity program account</h3>
-<p>If you have determined that you require a business number and charity program account, follow the steps on: <br> <a href="https://cra-design.github.io/cop-business/register-business/how-register-res-sub1.html#h-1">Register with Business Registration Online(BRO)</a></p>
+<p>If you have determined that you require a business number and charity program account, follow the steps on: <br> <a href="#">Register with Business Registration Online(BRO)</a></p>
  
   </li>
       <li>
