--- a/development/business-account.html
+++ b/development/business-account.html
@@ -372,14 +372,14 @@
 			</details>
 						<details>
 				<summary>If your organization applied to become a registered charity in the past</summary>
-				<h4 class="h5">Your organization may already have a BN and RR charity account</h4>
-				<p>If your organization submitted an application in the past but was never registered, it may already have been assigned a BN and RR charity account.</p>
+				<h4 class="h5">Your organization may already have a BN and RR program account</h4>
+				<p>If your organization submitted an application in the past but was never registered, it may already have been assigned a BN and RR program account.</p>
 				<p><a href="#.">Contact us</a> to check whether an account exists, before starting a new application.</p>
 				<p>This will avoid unnecessary steps and help you ensure that the right people are authorized on your organization’s account.</p>
 			</details>
 						<details>
 				<summary>If your organization is trying to access online services after its registration was revoked </summary>
-				<p>Your RR charity account is no longer active as a result of revocation</p>
+				<p>Your RR program account is no longer active as a result of revocation</p>
 				<p>If your registered charity, registered Canadian amateur athletic association, or registered national arts service organizations registration is revoked, you will no longer have access to your RR account on your CRA account.</p>
 				<p>Before applying for re-registration, <a href="#.">contact us</a></p>
 				<p>Once we confirm you are authorized on the file, we will restore access to your organization’s RR account so that you may prepare and submit your application for re-registration through MyBA.</p>
