--- a/development/business-account.html
+++ b/development/business-account.html
@@ -284,10 +284,19 @@
 
     
 <p>Setting up a CRA account is the quickest and safest way to manage your organization's account information.</p>
+<p>To use charities online services, you will need to:</p>
+	<ol>
+		<li>Register for a CRA account</li>
+		<li>Add your business number (BN) and registered charity (RR) program account</li>
+	</ol>
+
+<!-- <img src="/charities/operating-a-registered-charity/issuing-receipts/" alt="example of a business number and program account identifier" class="img-responsive cq-dd-image" data-emptytext="Image"/> -->
+<p>Learn more about the BN and RR program account: <a href="#">Registration number</a>.</p>
+
 <h2 class="h3">On this page</h2>
     <ul>
       <li><a href="#h-1">What you can do with a CRA account</a></li>
-      <li><a href="#h-2">Register for a CRA account</a></li>  
+      <li><a href="#h-2">Set up your CRA account, business number and charity account</a></li>  
       <li><a href="#h-3">Register your charity</a></li> 
     </ul>
 
@@ -300,26 +309,19 @@
     <li>apply to become a registered charity or a registered Canadian amateur athletic association</li>
     <li>file the T3010 annual information return</li>
     <li>update your organization’s information</li>
-    <li>communicate directly with us</li>
+    <li>submit general enquires to us</li>
 </ul>
 
 
-<h2 id="h-2">Register for a CRA account</h2> 
-<p>To use charities online services, you will need to:</p>
-	<ol>
-		<li>Register for a CRA account</li>
-		<li>Add your business number (BN) and registered charity (RR) program account</li>
-	</ol>
-
-<!-- <img src="/charities/operating-a-registered-charity/issuing-receipts/" alt="example of a business number and program account identifier" class="img-responsive cq-dd-image" data-emptytext="Image"/> -->
-<p>Learn more about the BN and RR program account: <a href="#">Registration number</a>.</p>
+<h2 id="h-2">Set up your CRA account, business number and charity account</h2> 
+<p>Follow these steps to get set up for charities online services:</p>
 
 <ol class="lst-stps stps-strpd">
       <li>
     <h3>Register your CRA account</h3>
     <p>Create a CRA user ID and password, or sign in with a Sign-In partner.</p>
 	<p>This gives you access to the CRA’s secure online services.</p>
-    <p>To register follow the steps on: <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">Register for a CRA account</a></p>
+    <p>To register, follow the steps on: <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">Register for a CRA account</a></p>
   </li>
       <li>
     <h3>Set up your BN and RR program account</h3>
