--- a/development/business-account.html
+++ b/development/business-account.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>How to sign up for chartities online services - Canada.ca</title>
+<title>How to register for CRA online services for charities - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
@@ -281,10 +281,10 @@
   
 <h2 id="h-1">What you can do with a CRA account</h2>   
 <p>Setting up a CRA account is the quickest and safest way to manage your organization's account information.</p>
-<p>Once signed up, your organization can:</p>
+<p>Once set up, you can:</p>
 <ul>
     <li>apply to become a registered charity or a registered Canadian amateur athletic association</li>
-    <li>file the T3010 annual information return</li>
+    <li>file your T3010 annual information return</li>
     <li>update your organization’s information</li>
     <li>submit general enquires to us</li>
 </ul>
@@ -301,7 +301,7 @@
 		<p>To register, follow the steps on: <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">Register for a CRA account</a></p>
 	</li>
 	<li>
-		<h3>Set up your BN and RR program account</h3>
+		<h3>Set up your business number and charity program account</h3>
 		<p>Many organizations already have a BN and RR program account. If you already have them, <strong>do not</strong> make a new request.</p>
 		<ol class="lst-stps-sub stps-strpd">
 			<li>
@@ -312,11 +312,11 @@
 					<li>registered Canadian amateur athletic association</li>
 					<li>registered national arts service organization</li>
 				</ul>
-				<p><strong>Do not</strong> register again, proceed to step 3 to add your BN and RR program account to your CRA Account.</p>
+				<p><strong>Do not</strong> register again, proceed to <a href ="#.">step 3</a> to add your BN and RR program account to your CRA Account.</p>
 			</li>
 			<li>
-				<h4>If you aren't sure whether you have a BN and RR program account</h4>
-				<p>Consider the following situations to determine if you have to create a new BN or RR program account:</p>
+				<h4>Determine if you have a BN and RR program account</h4>
+				<p>Consider the following situations to determine if you have to register for a new BN and RR program account:</p>
 				<details>
 					<summary>If you don't know if you have a BN</summary>
 					<p>see <a href="#">Ways to find an existing business number</a>.</p>
@@ -334,10 +334,10 @@
 					<summary>If your organization is an internal division of a head body</summary>
 					<p>Your head body may already have a BN and RR program account</p>
 					<p>Contact your head body to inquire about the BN and to determine if a RR program account has already been created for your division. If these are not established, ask your head body to acquire them.</p>
-					<p>To access your RR account:</p>
+					<p>To access your head body's CRA account:</p>
 					<ol>
 						<li>register for <a href="#.">Represent a client</a> to get a representative identifier (RepID)</li>
-						<li>your head body will then need to <a href="#.">authorize you under their BN and RR program account</a></li>
+						<li>your head body will then need to <a href="#.">authorize you as a representative</a></li>
 					</ol>
 					<p>For more information about internal divisions: <a href="#.">Guidance CG-028, Head bodies and their internal divisions</a>.</p>
 				</details>
@@ -356,8 +356,8 @@
 					<p>Once we confirm you are authorized on the file, we will restore access to your organization’s RR account so that you may prepare and submit your application for re-registration through MyBA.</p>
 				</details>
 				<br>
-			<h4>Register for a business number and charity program account</h4>
-				<p>If you have determined that you require a business number and charity program account, follow the steps on:</p>
+			<h4>Register for a BN and RR program account</h4>
+				<p>If you have determined that you require a BN and RR program account, follow the steps on:</p>
 				<p><a href="#.">Register with Business Registration Online(BRO)</a></p>
 			</li>
 	</li>
