--- a/development/business-account.html
+++ b/development/business-account.html
@@ -290,7 +290,7 @@
 </ul>
 
 
-<h2 id="h-2">Set up your CRA account, business number and charity account</h2> 
+<h2 id="h-2">Register for your CRA account, business number and charity account</h2> 
 <p>Follow these steps to get set up for charities online services:</p>
 
 <ol class="lst-stps stps-strpd">
