--- a/development/business-account.html
+++ b/development/business-account.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>How to register for CRA online services for charities - Canada.ca</title>
+<title>Access online services for charities - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
@@ -27,7 +27,7 @@
 		<meta name="author" content="Canada Revenue Agency"/>
 	
 	
-		<meta name="dcterms.title" content="How to sign up for chartities online services"/>
+		<meta name="dcterms.title" content="Access online services for charities"/>
 	
 	
 		<meta name="dcterms.description" content="This Web page describes a new service for registered charities called My Business Account (MyBA), a secure and convenient way to access information on their accounts online."/>
@@ -257,121 +257,88 @@
 
 
 
-    <h1 class="gc-thickline mrgn-tp-0" id="wb-cont">How to sign up for charities online services</h1>
+    <h1 class="gc-thickline mrgn-tp-0" id="wb-cont">Access online services for charities</h1>
 
 
 </div>
 <div class="mwsbodytext text parbase section">
-<p>To use charities online services, you will need to:</p>
-	<ol>
-		<li>Register for a CRA account</li>
-		<li>Add your business number (BN) and registered charity (RR) program account</li>
-	</ol>
-<p>Learn more about the BN and RR program account: <a href="#">Registration number</a>.</p>
+<p><a href="#">My Business Account</a> (MyBA) is a fast, secure and easy way for organizations to access and update their Canada Revenue Agency (CRA) account information.</p>
+
+
 
 <h2 class="h3">On this page</h2>
     <ul>
-      <li><a href="#h-1">What you can do with a CRA account</a></li>
-      <li><a href="#h-2">Set up your CRA account, business number and charity account</a></li>  
-      <li><a href="#h-3">Register your charity</a></li> 
+      <li><a href="#h-1">What you can do with My Business Account </a></li>
+      <li><a href="#h-2">Steps to register My Business Account for charities</a></li>  
+      <li><a href="#h-3">Access for representatives</a></li> 
+	  <li><a href="#h-4">Get our help</a></li> 
     </ul>
 
 </div>
 <div class="mwsbodytext text parbase section">
   
+
+
 <h2 id="h-1">What you can do with a CRA account</h2>   
-<p>Setting up a CRA account is the quickest and safest way to manage your organization's account information.</p>
-<p>Once set up, you can:</p>
+<p>Using MyBA for charities, you can complete these tasks online:</p>
 <ul>
     <li>apply to become a registered charity or a registered Canadian amateur athletic association</li>
     <li>file your T3010 annual information return</li>
     <li>update your organization’s information</li>
     <li>submit general enquires to us</li>
 </ul>
+<p>To use online services for charities through MyBA, your organization needs a business number (BN) and an associated charity program account (RR).</p>
+<p>To start, follow these steps:</p>
 
+<h2 id="h-2">Steps to register My Business Account for charities </h2> 
 
-<h2 id="h-2">Register for your CRA account, business number and charity account</h2> 
-<p>Follow these steps to get set up for charities online services:</p>
 
 <ol class="lst-stps stps-strpd">
     <li>
-    <h3>Register your CRA account</h3>
-		<p>Create a CRA user ID and password, or sign in with a Sign-In partner.</p>
-		<p>This gives you access to the CRA’s secure online services.</p>
-		<p>To register, follow the steps on: <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">Register for a CRA account</a></p>
+    <h3>Register for a CRA account</h3>
+		<p>To get started you must<a href="">register for a CRA account</a></p>
+		<p></p>
+		<details>
+			<summary>Already registered</summary>
+			<p><a href="">Sign-in</a> and move on to the next step.</p>
+		</details>
 	</li>
 	<li>
-		<h3>Set up your business number and charity program account</h3>
-		<p>Many organizations already have a BN and RR program account. If you already have them, <strong>do not</strong> make a new request.</p>
-		<ol class="lst-stps-sub stps-strpd">
-			<li>
-				<h4>If you already have a BN and RR program account</h4>
-				<p>You already have a BN and RR program account if your organization is a:</p>
-				<ul>
-					<li>registered charity</li>
-					<li>registered Canadian amateur athletic association</li>
-					<li>registered national arts service organization</li>
-				</ul>
-				<p><strong>Do not</strong> register again, proceed to <a href ="#.">step 3</a> to add your BN and RR program account to your CRA Account.</p>
-			</li>
-			<li>
-				<h4>Determine if you have a BN and RR program account</h4>
-				<p>Consider the following situations to determine if you have to register for a new BN and RR program account:</p>
-				<details>
-					<summary>If you don't know if you have a BN</summary>
-					<p>see <a href="#">Ways to find an existing business number</a>.</p>
-				</details>
-				<details>
-					<summary>If your organization is incorporated</summary>
-					<p>You already have a BN but are <strong>missing</strong> a RR program account if your organization is incorporated but is not yet a:</p>
-						<ul>
-							<li>registered charity</li>
-							<li>registered Canadian amateur athletic association</li>
-							<li>registered national arts service organization</li>
-						</ul>
-				</details>
-				<details>
-					<summary>If your organization is an internal division of a head body</summary>
-					<p>Your head body may already have a BN and RR program account</p>
-					<p>Contact your head body to inquire about the BN and to determine if a RR program account has already been created for your division. If these are not established, ask your head body to acquire them.</p>
-					<p>To access your head body's CRA account:</p>
-					<ol>
-						<li>register for <a href="#.">Represent a client</a> to get a representative identifier (RepID)</li>
-						<li>your head body will then need to <a href="#.">authorize you as a representative</a></li>
-					</ol>
-					<p>For more information about internal divisions: <a href="#.">Guidance CG-028, Head bodies and their internal divisions</a>.</p>
-				</details>
-				<details>
-					<summary>If your organization applied to become a registered charity in the past</summary>
-					<h4 class="h5">Your organization may already have a BN and RR program account</h4>
-					<p>If your organization submitted an application in the past but was never registered, it may already have been assigned a BN and RR program account.</p>
-					<p><a href="#.">Contact us</a> to check whether an account exists, before starting a new application.</p>
-					<p>This will avoid unnecessary steps and help you ensure that the right people are authorized on your organization’s account.</p>
-				</details>
-				<details>
-					<summary>If your organization is trying to access online services after its registration was revoked </summary>
-					<p>Your RR program account is no longer active as a result of revocation</p>
-					<p>If your registered charity, registered Canadian amateur athletic association, or registered national arts service organizations registration is revoked, you will no longer have access to your RR account on your CRA account.</p>
-					<p>Before applying for re-registration, <a href="#.">contact us</a></p>
-					<p>Once we confirm you are authorized on the file, we will restore access to your organization’s RR account so that you may prepare and submit your application for re-registration through MyBA.</p>
-				</details>
-				<br>
-			<h4>Register for a BN and RR program account</h4>
-				<p>If you have determined that you require a BN and RR program account, follow the steps on:</p>
-				<p><a href="#.">Register with Business Registration Online(BRO)</a></p>
-			</li>
+		<h3>Register for a BN and RR account </h3>
+		<h4>Before you register</h4>
+		<p>Many organizations already have a BN and RR program account. If you already have them, do<strong>not</strong> make a new request.</p>
+		<details>
+			<summary>Find out if I already have a BN and RR account</summary>
+			<h5>Business number (BN)</h5>
+			<p>You can only have one business number per business.</p>
+			<p>If you do not know what your business number is or are not sure if you already have one, check options to <a href="#.">find an existing BN</a>.</p>
+			<h5>Registered charity program account (RR)</h5>
+			<p>To find out if you have an existing RR account, <a href="">contact us</a>.</p>
+		</details>
+		<h4>Register</h4>
+		<p>Business Registration Online(BRO) is a one-stop, online, self-serve application that lets you register for a business number and associated program account.</p>
+		<p><a href="">Register your BN and RR account through Business Registration Online (BRO)</a></p>
+		<details>
+			<summary>Already have a BN and RR account</summary>
+			<p>If you already have a BN and RR account, move on to the next step.</p>
+		</details>
 	</li>
 	<li>
-		<h3>Add your business number and charity program account to your CRA account</h3>
-			<p>In your CRA account, add your BN to unlock services for charities.</p>
+		<h3>Add your BN to your CRA account</h3>
+			<p>After registering for a BN, you will need to add it to your CRA account to access MyBA services and information.</p>
+			<p>To add your BN to your CRA account</p>
 			<ol>
 				<li><a href="#.">Sign-in</a> to your CRA account</li>
-				<li>Select <strong>Add account</strong>, then <strong>Business account</strong></li>
-				<li>Select <strong>Add business number</strong>, then enter your business number</li>
-				<ul>
-					<li>If you have registered for an RR program account on this business number, it will show up automatically</li>
-				</ul>
+				<li>From the welcome page, select <strong>Add account</strong></li>
+				<li>Select <strong>Business account</strong></li>
+				<li>Select <strong>Add business number</strong></li>
+				<li>Enter your 9-digit business number and select <strong>add</strong></li>
+				<li>After getting your confirmation, return to the welcome page and select your <strong>Business</strong> account to access My Business Account</li>
 			</ol>
+			<section class="alert alert-warning">
+				<p class="h3 mrgn-tp-0">A BN and RR account do not automatically make your organization a registered charity</p>
+				<p>To become one, you will still need to submit an application to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">register a charity under the Income Tax Act</a>.</p>  
+			</section>
 			<br>
 			<p>If you can't see or add your organizations BN after signing in, please <a href="#.">contact us</a></p>
 			<p>When you do, we will ask you for your social insurance number. This allows us to link your identity to your organization's account. Like other personal information, your SIN is protected under the Privacy Act, and will only be used to confirm your identity.</p>
@@ -379,18 +346,17 @@
 	</ol>
 
 
-<h2 id="h-3">Register your charity</h2> 
-<p>Having a business number and a charity program account does not automatically make you a registered charity</p>
-<p>To become a registered charity, you will need to:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-      <li class="cnjnctn-col">
-        <p>Submit an application to <a href="#">register a charity under the Income Tax Act</p>
-      </li>
-      <li class="cnjnctn-col">
-        <p>Sign-in to your CRA account and click <strong>Register a charity</strong></p>
-      </li>
-</ul>
+<h2 id="h-3">Access for representatives</h2> 
+<p>A representative can be anyone who would like to access information and services on behalf of your organization or head body. </p>
+<p>To gain access as a representative:</p>
+<ol>
+      <li>Register for <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client/about-represent-a-client.html">Represent a client</a> to get a representative identifier (RepID).</li>
+      <li>Your organization or head body will then need to <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization.html">authorize you under their BN and RR account</a>.</li>
+</ol>
     
+<h2 id="h-4">Get our help</h2>
+<p>Don't hesitate to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact us</a> if you require assistance.</p>
+<p>Are you signed up for our <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-charities-giving-whats-new.html">electronic mailing list</a>. Sign up today to get the latest charities news and information on upcoming webinars.</p>
 </div>
 
 
