--- a/development/business-account.html
+++ b/development/business-account.html
@@ -296,7 +296,7 @@
 <ol class="lst-stps stps-strpd">
     <li>
     <h3>Register for a CRA account</h3>
-		<p>To get started you must<a href="">register for a CRA account</a></p>
+		<p>To get started you must <a href="">register for a CRA account</a></p>
 		<p></p>
 		<details>
 			<summary>Already registered</summary>
@@ -306,7 +306,7 @@
 	<li>
 		<h3>Register for a BN and RR account </h3>
 		<h4>Before you register</h4>
-		<p>Many organizations already have a BN and RR program account. If you already have them, do<strong>not</strong> make a new request.</p>
+		<p>Many organizations already have a BN and RR program account. If you already have them, do <strong>not</strong> make a new request.</p>
 		<details>
 			<summary>Find out if I already have a BN and RR account</summary>
 			<h5>Business number (BN)</h5>
@@ -327,7 +327,7 @@
 		<h3>Add your BN to your CRA account</h3>
 			<p>After registering for a BN, you will need to add it to your CRA account to access MyBA services and information.</p>
 			<p>To add your BN to your CRA account</p>
-			<ol>
+			<ol class="lst-stps-sub stps-strpd">
 				<li><a href="#.">Sign-in</a> to your CRA account</li>
 				<li>From the welcome page, select <strong>Add account</strong></li>
 				<li>Select <strong>Business account</strong></li>
