--- a/development/business-account.html
+++ b/development/business-account.html
@@ -306,7 +306,8 @@
 	<li>
 		<h3>Register for a BN and RR account </h3>
 		<h4>Before you register</h4>
-		<p>Many organizations already have a BN and RR program account. If you already have them, do <strong>not</strong> make a new request.</p>
+		<p>Many organizations applying to become a charity already have a BN and RR program account.</p> 
+		<p>Do <strong>not</strong> register for another BN or RR account if you have one already.</p>
 		<details>
 			<summary>Find out if I already have a BN and RR account</summary>
 			<h5>Business number (BN)</h5>
@@ -339,7 +340,7 @@
 				<p class="h3 mrgn-tp-0">A BN and RR account do not automatically make your organization a registered charity</p>
 				<p>To become one, you will still need to submit an application to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">register a charity under the Income Tax Act</a>.</p>  
 			</section>
-			<br>
+
 			<p>If you can't see or add your organizations BN after signing in, please <a href="#.">contact us</a></p>
 			<p>When you do, we will ask you for your social insurance number. This allows us to link your identity to your organization's account. Like other personal information, your SIN is protected under the Privacy Act, and will only be used to confirm your identity.</p>
 		</li>
