--- a/development/business-account.html
+++ b/development/business-account.html
@@ -262,14 +262,14 @@
 
 </div>
 <div class="mwsbodytext text parbase section">
-<p><a href="#">My Business Account</a> (MyBA) is a fast, secure and easy way for organizations to access and update their Canada Revenue Agency (CRA) account information.</p>
+<p>A CRA account is a fast, secure and easy way for organizations to access and update their Canada Revenue Agency (CRA) account information.</p>
 
 
 
 <h2 class="h3">On this page</h2>
     <ul>
       <li><a href="#h-1">What you can do with My Business Account </a></li>
-      <li><a href="#h-2">Steps to register My Business Account for charities</a></li>  
+      <li><a href="#h-2">Steps to register a CRA account for charities</a></li>  
       <li><a href="#h-3">Access for representatives</a></li> 
 	  <li><a href="#h-4">Get our help</a></li> 
     </ul>
@@ -280,17 +280,17 @@
 
 
 <h2 id="h-1">What you can do with a CRA account</h2>   
-<p>Using MyBA for charities, you can complete these tasks online:</p>
+<p>Using a CRA account for charities, you can complete these tasks online:</p>
 <ul>
     <li>apply to become a registered charity or a registered Canadian amateur athletic association</li>
     <li>file your T3010 annual information return</li>
     <li>update your organization’s information</li>
     <li>submit general enquires to us</li>
 </ul>
-<p>To use online services for charities through MyBA, your organization needs a business number (BN) and an associated charity program account (RR).</p>
+<p>To use online services for charities through a CRA account, your organization needs a business number (BN) and an associated charity program account (RR).</p>
 <p>To start, follow these steps:</p>
 
-<h2 id="h-2">Steps to register My Business Account for charities </h2> 
+<h2 id="h-2">Steps to register a CRA account for charities </h2> 
 
 
 <ol class="lst-stps stps-strpd">
@@ -305,8 +305,9 @@
 	</li>
 	<li>
 		<h3>Register for a BN and RR account </h3>
+		<p>Adding a business number and charity program account to your CRA account will add charity related services.</p>
 		<h4>Before you register</h4>
-		<p>Many organizations applying to become a charity already have a BN and RR program account.</p> 
+		<p>Many organizations applying to become a charity already have a BN and RR account.</p> 
 		<p>Do <strong>not</strong> register for another BN or RR account if you have one already.</p>
 		<details>
 			<summary>Find out if I already have a BN and RR account</summary>
@@ -316,7 +317,7 @@
 			<h5>Registered charity program account (RR)</h5>
 			<p>To find out if you have an existing RR account, <a href="">contact us</a>.</p>
 		</details>
-		<h4>Register</h4>
+		<h4>How to register</h4>
 		<p>Business Registration Online(BRO) is a one-stop, online, self-serve application that lets you register for a business number and associated program account.</p>
 		<p><a href="">Register your BN and RR account through Business Registration Online (BRO)</a></p>
 		<details>
@@ -328,7 +329,7 @@
 		<h3>Add your BN to your CRA account</h3>
 			<p>After registering for a BN, you will need to add it to your CRA account to access MyBA services and information.</p>
 			<p>To add your BN to your CRA account</p>
-			<ol class="lst-stps-sub stps-strpd">
+			<ol>
 				<li><a href="#.">Sign-in</a> to your CRA account</li>
 				<li>From the welcome page, select <strong>Add account</strong></li>
 				<li>Select <strong>Business account</strong></li>
