--- a/development/business-account.html
+++ b/development/business-account.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>Access online services for charities - Canada.ca</title>
+<title>How to register online services for charities - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
@@ -268,7 +268,7 @@
 
 <h2 class="h3">On this page</h2>
     <ul>
-      <li><a href="#h-1">What you can do with My Business Account </a></li>
+      <li><a href="#h-1">What you can do with a CRA account </a></li>
       <li><a href="#h-2">Steps to register a CRA account for charities</a></li>  
       <li><a href="#h-3">Access for representatives</a></li> 
 	  <li><a href="#h-4">Get our help</a></li> 
@@ -305,7 +305,6 @@
 	</li>
 	<li>
 		<h3>Register for a BN and RR account </h3>
-		<p>Adding a business number and charity program account to your CRA account will add charity related services.</p>
 		<h4>Before you register</h4>
 		<p>Many organizations applying to become a charity already have a BN and RR account.</p> 
 		<p>Do <strong>not</strong> register for another BN or RR account if you have one already.</p>
@@ -327,7 +326,7 @@
 	</li>
 	<li>
 		<h3>Add your BN to your CRA account</h3>
-			<p>After registering for a BN, you will need to add it to your CRA account to access MyBA services and information.</p>
+			<p>After registering for a BN, you will need to add it to your CRA account to access charity services and information.</p>
 			<p>To add your BN to your CRA account</p>
 			<ol>
 				<li><a href="#.">Sign-in</a> to your CRA account</li>
@@ -335,7 +334,7 @@
 				<li>Select <strong>Business account</strong></li>
 				<li>Select <strong>Add business number</strong></li>
 				<li>Enter your 9-digit business number and select <strong>add</strong></li>
-				<li>After getting your confirmation, return to the welcome page and select your <strong>Business</strong> account to access My Business Account</li>
+				<li>After getting your confirmation, return to the welcome page and select your <strong>Business</strong> account to access your charity related services</li>
 			</ol>
 			<section class="alert alert-warning">
 				<p class="h3 mrgn-tp-0">A BN and RR account do not automatically make your organization a registered charity</p>
