--- a/development/business-account.html
+++ b/development/business-account.html
@@ -325,8 +325,8 @@
 		</details>
 	</li>
 	<li>
-		<h3>Add your BN to your CRA account</h3>
-			<p>After registering for a BN, you will need to add it to your CRA account to access charity services and information.</p>
+		<h3>Add your BN and RR account to your CRA account</h3>
+			<p>After registering for a BN, you will need to add it to your CRA account to access charity services and information. Your RR account is associated with your BN and will be added when you add your BN.</p>
 			<p>To add your BN to your CRA account</p>
 			<ol>
 				<li><a href="#.">Sign-in</a> to your CRA account</li>
