--- a/development/business-account.html
+++ b/development/business-account.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>How to register online services for charities - Canada.ca</title>
+<title>Access online services for charities - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
