--- a/development/business-account.html
+++ b/development/business-account.html
@@ -262,16 +262,16 @@
 
 </div>
 <div class="mwsbodytext text parbase section">
-<p>A CRA account is a fast, secure and easy way for organizations to access and update their Canada Revenue Agency (CRA) account information.</p>
+<p>A Canada Revenue Agency (CRA) account is a fast, secure and easy way for organizations to access and update their CRA account information</p>
 
 
 
 <h2 class="h3">On this page</h2>
     <ul>
-      <li><a href="#h-1">What you can do with a CRA account </a></li>
+      <li><a href="#h-1">What you can do in your CRA account</a></li>
       <li><a href="#h-2">Steps to register a CRA account for charities</a></li>  
-      <li><a href="#h-3">Access for representatives</a></li> 
-	  <li><a href="#h-4">Get our help</a></li> 
+      <li><a href="#h-3">Request authorization as a representative</a></li> 
+	  <li><a href="#h-4">Get help</a></li> 
     </ul>
 
 </div>
@@ -279,57 +279,49 @@
   
 
 
-<h2 id="h-1">What you can do with a CRA account</h2>   
-<p>Using a CRA account for charities, you can complete these tasks online:</p>
+<h2 id="h-1">What you can do in your CRA account</h2>   
+<p>Your organization needs a business number (BN) and an associated charity program account (RR), to access your charity information in your CRA account.</p>
+<p>Your charity can use a CRA account to complete these tasks online:</p>
 <ul>
-    <li>apply to become a registered charity or a registered Canadian amateur athletic association</li>
-    <li>file your T3010 annual information return</li>
-    <li>update your organization’s information</li>
-    <li>submit general enquires to us</li>
+    <li>Apply to become a registered charity or a registered Canadian amateur athletic association</li>
+    <li>File your T3010 annual information return</li>
+    <li>Update your organization’s information</li>
+    <li>Submit general enquires to us</li>
 </ul>
-<p>To use online services for charities through a CRA account, your organization needs a business number (BN) and an associated charity program account (RR).</p>
+
 <p>To start, follow these steps:</p>
 
-<h2 id="h-2">Steps to register a CRA account for charities </h2> 
+<h2 id="h-2">Steps to register a CRA account for charities</h2> 
 
 
 <ol class="lst-stps stps-strpd">
     <li>
     <h3>Register for a CRA account</h3>
 		<p>To get started you must <a href="">register for a CRA account</a></p>
-		<p></p>
-		<details>
-			<summary>Already registered</summary>
-			<p><a href="">Sign-in</a> and move on to the next step.</p>
-		</details>
 	</li>
 	<li>
-		<h3>Register for a BN and RR account </h3>
-		<h4>Before you register</h4>
-		<p>Many organizations applying to become a charity already have a BN and RR account.</p> 
+		<h3>Determine if you need to register for a BN and RR account</h3>
+		<p>Many organizations may already have a BN and RR account.</p> 
 		<p>Do <strong>not</strong> register for another BN or RR account if you have one already.</p>
+		<p>If you already have a BN and RR account, proceed to step 3.</p>
 		<details>
 			<summary>Find out if I already have a BN and RR account</summary>
 			<h5>Business number (BN)</h5>
 			<p>You can only have one business number per business.</p>
-			<p>If you do not know what your business number is or are not sure if you already have one, check options to <a href="#.">find an existing BN</a>.</p>
+			<p>If you do not know what your business number is or are not sure if you already have one, check options to <a href="https://canada-preview.adobecqms.net/en/revenue-agency/services/tax/businesses/topics/business-registration/find-business-number.html">find an existing BN</a>.</p>
 			<h5>Registered charity program account (RR)</h5>
 			<p>To find out if you have an existing RR account, <a href="">contact us</a>.</p>
 		</details>
-		<h4>How to register</h4>
-		<p>Business Registration Online(BRO) is a one-stop, online, self-serve application that lets you register for a business number and associated program account.</p>
-		<p><a href="">Register your BN and RR account through Business Registration Online (BRO)</a></p>
-		<details>
-			<summary>Already have a BN and RR account</summary>
-			<p>If you already have a BN and RR account, move on to the next step.</p>
-		</details>
+		<h4>If you need to register for a BN and RR account</h4>
+		<p>Registering online is the fastest and easiest way to get a BN and RR account.</p>
+		<p><a href="https://canada-preview.adobecqms.net/en/revenue-agency/services/tax/businesses/topics/business-registration/business-number-program-account/how-register/resident.html#h-1">Register with Business Registration Online (BRO)</a></p>
 	</li>
 	<li>
 		<h3>Add your BN and RR account to your CRA account</h3>
 			<p>After registering for a BN, you will need to add it to your CRA account to access charity services and information. Your RR account is associated with your BN and will be included when you add your BN.</p>
 			<p>To add your BN to your CRA account</p>
 			<ol>
-				<li><a href="#.">Sign-in</a> to your CRA account</li>
+				<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services.html">Sign-in</a> to your CRA account</li>
 				<li>From the welcome page, select <strong>Add account</strong></li>
 				<li>Select <strong>Business account</strong></li>
 				<li>Select <strong>Add business number</strong></li>
@@ -351,11 +343,11 @@
 <p>A representative can be anyone who would like to access information and services on behalf of your organization or head body. </p>
 <p>To gain access as a representative:</p>
 <ol>
-      <li>Register for <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client/about-represent-a-client.html">Represent a client</a> to get a representative identifier (RepID).</li>
+      <li>Register for <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client/about-represent-a-client.html">Represent a client</a> in your CRA account to get a representative identifier (RepID).</li>
       <li>Your organization or head body will then need to <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization.html">authorize you under their BN and RR account</a>.</li>
 </ol>
     
-<h2 id="h-4">Get our help</h2>
+<h2 id="h-4">Get help</h2>
 <p>Don't hesitate to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact us</a> if you require assistance.</p>
 <p>Are you signed up for our <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-charities-giving-whats-new.html">electronic mailing list</a>. Sign up today to get the latest charities news and information on upcoming webinars.</p>
 </div>
