--- a/development/business-account.html
+++ b/development/business-account.html
@@ -262,7 +262,7 @@
 
 </div>
 <div class="mwsbodytext text parbase section">
-<p>A Canada Revenue Agency (CRA) account is a fast, secure and easy way for organizations to access and update their CRA account information</p>
+<p>A Canada Revenue Agency (CRA) account is a fast, secure and easy way for organizations to access and update their CRA account information.</p>
 
 
 
@@ -298,6 +298,7 @@
     <li>
     <h3>Register for a CRA account</h3>
 		<p>To get started you must <a href="">register for a CRA account</a></p>
+		<p>If you already have a CRA account, proceed to step 2.</p>
 	</li>
 	<li>
 		<h3>Determine if you need to register for a BN and RR account</h3>
@@ -333,13 +334,11 @@
 				<p>To become one, you will still need to submit an application to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">register a charity under the Income Tax Act</a>.</p>  
 			</section>
 
-			<p>If you can't see or add your organizations BN after signing in, please <a href="#.">contact us</a></p>
-			<p>When you do, we will ask you for your social insurance number. This allows us to link your identity to your organization's account. Like other personal information, your SIN is protected under the Privacy Act, and will only be used to confirm your identity.</p>
-		</li>
+			</li>
 	</ol>
 
 
-<h2 id="h-3">Access for representatives</h2> 
+<h2 id="h-3">Request authorization as a representative</h2> 
 <p>A representative can be anyone who would like to access information and services on behalf of your organization or head body. </p>
 <p>To gain access as a representative:</p>
 <ol>
